--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,36 @@
   
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">BOA PayAll</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/personal">Personal</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/business">Business</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/whatsnew">What's New</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/help">Help</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/download">Download</a>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          </form>
+        </div>
+      </nav>
   <app-root></app-root>
 </body>
 </html>
